[gd_scene load_steps=59 format=2]

[ext_resource path="res://addons/PixelAdventure/Enemies/Trunk/Idle (64x32).png" type="Texture" id=1]
[ext_resource path="res://addons/PixelAdventure/Enemies/Trunk/Run (64x32).png" type="Texture" id=2]
[ext_resource path="res://addons/PixelAdventure/Enemies/Trunk/Attack (64x32).png" type="Texture" id=3]
[ext_resource path="res://scenes/characters/EnemyStump.gd" type="Script" id=4]
[ext_resource path="res://scenes/BounceStaticBody.gd" type="Script" id=5]
[ext_resource path="res://addons/PixelAdventure/Enemies/Trunk/Hit (64x32).png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 1088, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 704, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 832, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "hit",
"speed": 20.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 52 ), SubResource( 52 ), SubResource( 52 ) ],
"loop": true,
"name": "shoot",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 11, 11 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 11, 2.5 )

[node name="EnemyStump" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 51
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 45 )

[node name="BounceStaticBody" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceStaticBody"]
position = Vector2( 0, -8.5 )
shape = SubResource( 46 )

[node name="FloorDetectorsLeft" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorDetectorsLeft"]
position = Vector2( -20, 15 )
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="FloorDetectorsRight" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorDetectorsRight"]
position = Vector2( 20, 15 )
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="WallDetectorsLeft" type="Node2D" parent="."]

[node name="Raycast2D" type="RayCast2D" parent="WallDetectorsLeft"]
position = Vector2( -8, 15 )
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="Raycast2D2" type="RayCast2D" parent="WallDetectorsLeft"]
position = Vector2( -8, -7 )
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="WallDetectorsRight" type="Node2D" parent="."]

[node name="Raycast2D" type="RayCast2D" parent="WallDetectorsRight"]
position = Vector2( 8, 15 )
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="Raycast2D2" type="RayCast2D" parent="WallDetectorsRight"]
position = Vector2( 8, -7 )
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="LineOfSight" type="RayCast2D" parent="."]
cast_to = Vector2( -512, 0 )
collision_mask = 16

[node name="PositionBulletL" type="Position2D" parent="."]
position = Vector2( -20, 4 )

[node name="PositionBulletR" type="Position2D" parent="."]
position = Vector2( 20, 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
